I think the project is ready !

--- a/templates/pages/shows.html
+++ b/templates/pages/shows.html
@@ -1,16 +1,28 @@
-{% extends 'layouts/main.html' %}
-{% block title %}Fyyur | Shows{% endblock %}
-{% block content %}
+{% extends 'layouts/main.html' %} {% block title %}Fyyur | Shows{% endblock %} {% block content %}
+<style>
+    a.del-show {
+        color: #f7630c;
+        position: absolute;
+        bottom: 30px;
+        right: 35px;
+        border: 1px dashed #f7630c;
+        padding: 3px 8px;
+        text-decoration: none;
+    }
+</style>
 <div class="row shows">
     {%for show in shows %}
     <div class="col-sm-4">
         <div class="tile tile-show">
+
             <img src="{{ show.artist_image_link }}" alt="Artist Image" />
             <h4>{{ show.start_time|datetime('full') }}</h4>
             <h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
             <p>playing at</p>
             <h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
+            <a href="/shows/{{ show.show_id }}/del" class="del-show"><i class="far fa-trash-alt"></i><span> Delete This Show</span></a>
         </div>
+
     </div>
     {% endfor %}
 </div>
