--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,3 @@
-
 /**
  * @file
  * Main stylesheet file.
@@ -8,38 +7,51 @@
 /*****************************************************************************
  * Main elements
  ****************************************************************************/
+
 html {
-  overflow-y: scroll;
+    overflow-y: scroll;
 }
+
 section {
-  margin: 50px 0;
+    margin: 50px 0;
 }
-section > h2 {
-  margin-bottom: 20px;
+
+section>h2 {
+    margin-bottom: 20px;
 }
+
 a {
-  cursor: pointer;
-  color: #ff8c3a;
+    cursor: pointer;
+    color: #ff8c3a;
 }
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-  background: initial;
-  color: initial;
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    background: initial;
+    color: initial;
 }
+
 p.lead {
-  margin-top: 30px;
+    margin-top: 30px;
 }
+
 ::selection {
-  background: #555;
-  color: #FFF;
+    background: #555;
+    color: #FFF;
 }
+
 ::-moz-selection {
-  background: #555;
-  color: #FFF;
+    background: #555;
+    color: #FFF;
 }
+
 ::-webkit-selection {
-  background: #555;
-  color: #FFF;
+    background: #555;
+    color: #FFF;
 }
+
+
 /* Main elements end */
 
 
@@ -47,49 +59,55 @@ p.lead {
  * Various other styles
  ****************************************************************************/
 
+
 /* Various other styles end */
 
 #front-splash {
-	width: 100%;
+    width: 100%;
 }
+
 .navbar.navbar-fixed-top {
-  background: none;
-  box-shadow: none;
-  border-bottom: none;
-  padding-top: 10px;
-  background-color: white;
+    background: none;
+    box-shadow: none;
+    border-bottom: none;
+    padding-top: 10px;
+    background-color: white;
 }
+
 .navbar-nav .search {
-  margin-top: 6px;
-  width: 300px;
-  margin-right: 15px;
+    margin-top: 6px;
+    width: 300px;
+    margin-right: 15px;
 }
-.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.active>a {
+
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.active>a {
     background: none;
     box-shadow: none;
     color: black;
     font-weight: bold;
 }
+
 .navbar-nav .search input {
-  border-radius: 50px;
-  background: #f2f2f2;
-  border: none;
-  box-shadow: none;
-  padding-left: 18px;
-  padding-right: 18px;
-  font-size: 1.4rem;
+    border-radius: 50px;
+    background: #f2f2f2;
+    border: none;
+    box-shadow: none;
+    padding-left: 18px;
+    padding-right: 18px;
+    font-size: 1.4rem;
 }
 
 .btn-default {
     border: none;
     background-color: #dde2e7;
-    background-image: linear-gradient(#dde2e7,#dde2e7);
+    background-image: linear-gradient(#dde2e7, #dde2e7);
     color: #444;
 }
 
 #content h3 {
-  margin-top: 15px;
-  margin-bottom: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 #content h3 button {
@@ -97,115 +115,163 @@ p.lead {
 }
 
 ul.items {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-ul.items > li > a {
-  margin-bottom: 15px;
-  display: flex;
-  color: initial;
-  text-decoration: initial;
-}
-ul.items > li > a > i {
-  padding: 7px 10px 0;
-}
-ul.items > li:hover {
-  color: orange;
-  cursor: pointer;
-}
-ul.items > li:hover h5 {
-  color: orange;
-}
-.item {
-  padding: 5px 5px 5px;
-  flex: 1;
-}
-.item h5 {
-  margin-top: 0;
-  margin-bottom: 5px;
-}
-img {
-  max-width: 100%;
-  max-height: 500px;
-}
-p {
-  margin: 5px 0;
-}
-p > i {
-  width: 30px;
-  text-align: center;
-}
-.not-seeking {
-  opacity: 0.6;
-}
-.seeking {
-  display: inline-block;
-  padding: 20px 30px;
-  margin-top: 30px;
-  border-radius: 15px;
-  font-weight: bold;
-  background: #ffffc6;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.seeking > button {
-  margin-left: 15px;
+ul.items>li>a {
+    margin-bottom: 15px;
+    display: flex;
+    color: initial;
+    text-decoration: initial;
 }
+
+ul.items>li>a>i {
+    padding: 7px 10px 0;
+}
+
+ul.items>li:hover {
+    color: orange;
+    cursor: pointer;
+}
+
+ul.items>li:hover h5 {
+    color: orange;
+}
+
+.item {
+    padding: 5px 5px 5px;
+    flex: 1;
+}
+
+.item h5 {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+img {
+    max-width: 100%;
+    max-height: 500px;
+}
+
+p {
+    margin: 5px 0;
+}
+
+p>i {
+    width: 30px;
+    text-align: center;
+}
+
+.not-seeking {
+    opacity: 0.6;
+}
+
+.seeking {
+    display: inline-block;
+    padding: 20px 30px;
+    margin-top: 30px;
+    border-radius: 15px;
+    font-weight: bold;
+    background: #ffffc6;
+}
+
+.seeking>button {
+    margin-left: 15px;
+}
+
 .description {
-  max-width: 450px;
+    max-width: 450px;
 }
+
 .genres {
-  margin-bottom: 15px;
+    margin-bottom: 15px;
 }
+
 span.genre {
-  display: inline-block;
-  font-family: monospace;
-  padding: 4px 8px;
-  background: #f0f0f0;
-  margin: 0 5px 5px 0;
-  border-radius: 3px;
-  color: #676767;
-  font-size: 0.9em;
-  text-transform: uppercase;
-  border: solid 1px #eee;
+    display: inline-block;
+    font-family: monospace;
+    padding: 4px 8px;
+    background: #f0f0f0;
+    margin: 0 5px 5px 0;
+    border-radius: 3px;
+    color: #676767;
+    font-size: 0.9em;
+    text-transform: uppercase;
+    border: solid 1px #eee;
 }
+
 .monospace {
-  font-family: monospace;
-  text-transform: uppercase;
+    font-family: monospace;
+    text-transform: uppercase;
 }
+
 h1.monospace {
-  font-size: 2.5rem;
+    font-size: 2.5rem;
 }
 
 h2.monospace {
-  font-size: 2.25rem;
-  opacity: 0.7;
+    font-size: 2.25rem;
+    opacity: 0.7;
 }
+
 .shows .tile-show {
-  height: 350px;
+    height: 350px;
 }
+
 .tile {
-  text-align: center;
-  padding: 15px 25px;
-  border: solid 1px #ebebeb;
-  height: 325px;
-  margin-bottom: 15px;
+    text-align: center;
+    padding: 15px 25px;
+    border: solid 1px #ebebeb;
+    height: 325px;
+    margin-bottom: 15px;
 }
+
 .tile img {
-  max-height: 200px;
+    max-height: 200px;
 }
+
 .form-wrapper {
-  max-width: 400px;
+    max-width: 400px;
 }
+
 .form-inline {
-  font-size: 0;
+    font-size: 0;
 }
+
 .form-inline .form-group {
-  width: 50%;
+    width: 50%;
 }
+
 .form-inline .form-control {
-  width: 100%;
+    width: 100%;
 }
+
 .subtitle {
-  opacity: 0.5;
+    opacity: 0.5;
+}
+
+.edit_btn {
+    float: right;
+    font-size: medium;
+    margin-right: 20px;
+    cursor: pointer;
+    color: cadetblue;
+}
+
+.del_btn {
+    float: right;
+    font-size: medium;
+    margin-right: 50px;
+    cursor: pointer;
+    color: #bf3b3b;
+}
+
+p.warning-text {
+    border: 1px solid #ff5e00;
+    padding: 10px;
+    border-radius: 10px;
+    color: #ff5e00;
+    cursor: help;
 }
