--- a/templates/forms/new_show.html
+++ b/templates/forms/new_show.html
@@ -1,24 +1,24 @@
-{% extends 'layouts/main.html' %}
-{% block title %}New Show Listing{% endblock %}
-{% block content %}
-  <div class="form-wrapper">
+{% extends 'layouts/main.html' %} {% block title %}New Show Listing{% endblock %} {% block content %}
+<div class="form-wrapper">
     <form method="post" class="form">
-      <h3 class="form-heading">List a new show</h3>
-      <div class="form-group">
-        <label for="artist_id">Artist ID</label>
-        <small>ID can be found on the Artist's Page</small>
-        {{ form.artist_id(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
-        <label for="venue_id">Venue ID</label>
-        <small>ID can be found on the Venue's Page</small>
-        {{ form.venue_id(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label for="start_time">Start Time</label>
-          {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
+        <h3 class="form-heading">List a new show</h3>
+        <p>
+            Want to create a new show in a cool place with the best artist? <br> Choose what you need from the list and click on the button !
+        </p>
+        <div class="form-group">
+            <label for="venue_id">Venue: </label>
+            <small>Choose a Venue from the list</small> {{ form.venue_id(class_ = 'form-control', autofocus = true) }}
+            <small>Did not find a suitable Venue ?   <a href="/venues/create"><i class="fas fa-plus-circle"></i> Post a venue</a></small>
         </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+        <div class="form-group">
+            <label for="artist_id">Artist: </label>
+            <small>Choose a Artist from the list</small> {{ form.artist_id(class_ = 'form-control', autofocus = true) }}
+            <small>Did not find a suitable Artist ?   <a href="/artists/create"><i class="fas fa-plus-circle"></i> Post a Artist </a></small>
+        </div>
+        <div class="form-group">
+            <label for="start_time">Start Time</label> {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
+        </div>
+        <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
-  </div>
+</div>
 {% endblock %}
