--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -1,122 +1,125 @@
 <!doctype html>
+
 <head>
-<meta charset="utf-8">
-<title>{% block title %}{% endblock %}</title>
+    <meta charset="utf-8">
+    <title>{% block title %}{% endblock %}</title>
 
-<!-- meta -->
-<meta name="description" content="">
-<meta name="author" content="">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<!-- /meta -->
+    <!-- meta -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- /meta -->
 
-<!-- styles -->
-<link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
-<link type="text/css" rel="stylesheet" href="/static/css/layout.main.css" />
-<link type="text/css" rel="stylesheet" href="/static/css/main.css" />
-<link type="text/css" rel="stylesheet" href="/static/css/main.responsive.css" />
-<link type="text/css" rel="stylesheet" href="/static/css/main.quickfix.css" />
-<!-- /styles -->
+    <!-- styles -->
+    <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="/static/css/layout.main.css" />
+    <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
+    <link type="text/css" rel="stylesheet" href="/static/css/main.responsive.css" />
+    <link type="text/css" rel="stylesheet" href="/static/css/main.quickfix.css" />
+    <!-- /styles -->
 
-<!-- favicons -->
-<link rel="shortcut icon" href="/static/ico/favicon.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="/static/ico/favicon.png">
-<!-- /favicons -->
+    <!-- favicons -->
+    <link rel="shortcut icon" href="/static/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="/static/ico/favicon.png">
+    <!-- /favicons -->
 
-<!-- scripts -->
-<script src="https://kit.fontawesome.com/af77674fe5.js"></script>
-<script src="/static/js/libs/modernizr-2.8.2.min.js"></script>
-<script src="/static/js/libs/moment.min.js"></script>
-<script type="text/javascript" src="/static/js/script.js" defer></script>
-<!--[if lt IE 9]><script src="/static/js/libs/respond-1.4.2.min.js"></script><![endif]-->
-<!-- /scripts -->
+    <!-- scripts -->
+    <script src="https://kit.fontawesome.com/af77674fe5.js"></script>
+    <script src="/static/js/libs/modernizr-2.8.2.min.js"></script>
+    <script src="/static/js/libs/moment.min.js"></script>
+    <script type="text/javascript" src="/static/js/script.js" defer></script>
+    <!--[if lt IE 9]><script src="/static/js/libs/respond-1.4.2.min.js"></script><![endif]-->
+    <!-- /scripts -->
 </head>
+
 <body>
 
-  <!-- Wrap all page content here -->
-  <div id="wrap">
+    <!-- Wrap all page content here -->
+    <div id="wrap">
 
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <!-- Fixed navbar -->
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">🔥</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li>
-              {% if (request.endpoint == 'venues') or
-                (request.endpoint == 'search_venues') or
-                (request.endpoint == 'show_venue') %}
-              <form class="search" method="post" action="/venues/search">
-                <input class="form-control"
-                  type="search"
-                  name="search_term"
-                  placeholder="Find a venue"
-                  aria-label="Search">
-              </form>
-              {% endif %}
-              {% if (request.endpoint == 'artists') or
-                (request.endpoint == 'search_artists') or
-                (request.endpoint == 'show_artist') %}
-              <form class="search" method="post" action="/artists/search">
-                <input class="form-control"
-                  type="search"
-                  name="search_term"
-                  placeholder="Find an artist"
-                  aria-label="Search">
-              </form>
-              {% endif %}
-            </li>
-          </ul>
-          <ul class="nav navbar-nav">
-            <li {% if request.endpoint == 'venues' %} class="active" {% endif %}><a href="{{ url_for('venues') }}">Venues</a></li>
-            <li {% if request.endpoint == 'artists' %} class="active" {% endif %}><a href="{{ url_for('artists') }}">Artists</a></li>
-            <li {% if request.endpoint == 'shows' %} class="active" {% endif %}><a href="{{ url_for('shows') }}">Shows</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-    <!-- Begin page content -->
-    <main id="content" role="main" class="container">
-
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          {% for message in messages %}
-            <div class="alert alert-block alert-info fade in">
-              <a class="close" data-dismiss="alert">&times;</a>
-              {{ message }}
+                    <a class="navbar-brand" href="/">🔥</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            {% if (request.endpoint == 'venues') or (request.endpoint == 'search_venues') or (request.endpoint == 'show_venue') %}
+                            <form class="search" method="post" action="/venues/search">
+                                <input class="form-control" type="search" name="search_term" placeholder="Find a venue" aria-label="Search">
+                            </form>
+                            {% endif %} {% if (request.endpoint == 'artists') or (request.endpoint == 'search_artists') or (request.endpoint == 'show_artist') %}
+                            <form class="search" method="post" action="/artists/search">
+                                <input class="form-control" type="search" name="search_term" placeholder="Find an artist" aria-label="Search">
+                            </form>
+                            {% endif %}
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li {% if request.endpoint=='venues' %} class="active" {% endif %}><a href="{{ url_for('venues') }}">Venues</a></li>
+                        <li {% if request.endpoint=='artists' %} class="active" {% endif %}><a href="{{ url_for('artists') }}">Artists</a></li>
+                        <li {% if request.endpoint=='shows' %} class="active" {% endif %}><a href="{{ url_for('shows') }}">Shows</a></li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
             </div>
-          {% endfor %}
-        {% endif %}
-      {% endwith %}
+        </div>
+        <style>
+            img.myphoto {
+                width: 200px;
+            }
+        </style>
+        <!-- Begin page content -->
+        <main id="content" role="main" class="container">
+            <div class="row">
+                <div class="col-md-2 col-md-offset-1">
+                    <img src="../../static/img/SaidAbbos.jpg" class="myphoto" alt="Saidabbos Khudoykulov">
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        Sorry for my English.
+                    </p>
+                    <p>Sorry if I did something wrong with this project. I just have a problem with the English language. And I had to look for and learn from the Internet a lot of the necessary skills for creating this project. but I won’t leave it all
+                        day after day. I study English and develop my IT and programming skills.</p>
+                </div>
 
-      {% block content %}{% endblock %}
-      
-    </main>
+            </div>
 
-  </div>
+            {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
+            <div class="alert alert-block alert-info fade in">
+                <a class="close" data-dismiss="alert">&times;</a> {{ message }}
+            </div>
+            {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock %}
 
-  <div id="footer">
-    <div class="container">
-      <p>Fyyur &copy; All Rights Reserved.</p>
-      {% block footer %}{% endblock %}
+        </main>
+
     </div>
-  </div>
 
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
-  <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
-  <script type="text/javascript" src="/static/js/plugins.js" defer></script>
+    <div id="footer">
+        <div class="container">
+            <p>Fyyur &copy; All Rights Reserved.</p>
+            {% block footer %}{% endblock %}
+        </div>
+    </div>
+
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')
+    </script>
+    <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
+    <script type="text/javascript" src="/static/js/plugins.js" defer></script>
 
 </body>
+
 </html>
