--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,25 +1,39 @@
-{% extends 'layouts/main.html' %}
-{% block title %}Fyyur{% endblock %}
-{% block content %}
+{% extends 'layouts/main.html' %} {% block title %}Fyyur{% endblock %} {% block content %}
+
 <div class="row">
-	<div class="col-sm-6">
-		<h1>Fyyur 🔥</h1>
-		<p class="lead">Where musical artists meet musical venues.</p>
-		<h3>
-			<a href="/venues"><button class="btn btn-primary btn-lg">Find a venue</button></a>
-			<a href="/venues/create"><button class="btn btn-default btn-lg">Post a venue</button></a>
-		</h3>
-		<h3>
-			<a href="/artists"><button class="btn btn-primary btn-lg">Find an artist</button></a>
-			<a href="/artists/create"><button class="btn btn-default btn-lg">Post an artist</button></a>
-		</h3>
-		<p class="lead">Publicize about your show for free.</p>
-		<h3>
-			<a href="/shows/create"><button class="btn btn-default btn-lg">Post a show</button></a>
-		</h3>
-	</div>
-	<div class="col-sm-6 hidden-sm hidden-xs">
-		<img id="front-splash" src="{{ url_for('static',filename='img/front-splash.jpg') }}" alt="Front Photo of Musical Band" />
-	</div>
+    <div class="col-sm-6">
+        <h1>Fyyur 🔥</h1>
+        <p class="lead">Where musical artists meet musical venues.</p>
+        <h3>
+            <a href="/venues"><button class="btn btn-primary btn-lg">Find a venue</button></a>
+            <a href="/venues/create"><button class="btn btn-default btn-lg">Post a venue</button></a>
+        </h3>
+        <h3>
+            <a href="/artists"><button class="btn btn-primary btn-lg">Find an artist</button></a>
+            <a href="/artists/create"><button class="btn btn-default btn-lg">Post an artist</button></a>
+        </h3>
+        <p class="lead">Publicize about your show for free.</p>
+        <h3>
+            <a href="/shows/create"><button class="btn btn-default btn-lg">Post a show</button></a>
+        </h3>
+    </div>
+    <div class="col-sm-6 hidden-sm hidden-xs">
+        <img id="front-splash" src="{{ url_for('static',filename='img/front-splash.jpg') }}" alt="Front Photo of Musical Band" />
+    </div>
+</div>
+<div class="row" id="thanksDiv">
+    <div class="col-md-2 col-md-offset-1">
+
+        <img src="../../static/img/SaidAbbos.jpg" class="myphoto" alt="Saidabbos Khudoykulov">
+    </div>
+    <div class="col-md-6">
+
+        <p>
+            Sorry for my English. <span class="xbutt"><i class="far fa-times-circle"></i></span>
+        </p>
+        <p>Sorry if I did something wrong with this project. I just have a problem with the English language. And I had to look for and learn from the Internet a lot of the necessary skills for creating this project. but I won’t leave it all day after day.
+            I study English and develop my IT and programming skills.</p>
+    </div>
+
 </div>
 {% endblock %}
